Init: spring-gift-jpa[박한솔] (#87)